[gd_scene load_steps=15 format=3 uid="uid://dnlxjul83opo1"]

[ext_resource type="PackedScene" uid="uid://dlqlykn1b1tiw" path="res://Minigames/Fish/Game1/fishbowl_dog.tscn" id="1_22xtv"]
[ext_resource type="Script" path="res://Minigames/Fish/Game1/fish_balance.gd" id="1_yb7no"]
[ext_resource type="Script" path="res://Minigames/Fish/Game1/DogSpawner.gd" id="2_achxp"]
[ext_resource type="Texture2D" uid="uid://d24w4wn6lg50g" path="res://Artwork/Misc/fishbowl_woman.png" id="2_srywf"]
[ext_resource type="Script" path="res://Minigames/Fish/Game1/DogSpawnerTimer.gd" id="3_2gpg7"]
[ext_resource type="Script" path="res://Minigames/Fish/Game1/Fishbowl.gd" id="3_r2ypj"]
[ext_resource type="Texture2D" uid="uid://bo0aqfywltnh8" path="res://Artwork/Misc/fishbowl.png" id="3_ux2nd"]
[ext_resource type="Script" path="res://Minigames/Fish/Game1/FishbowlSprite.gd" id="5_yv7u8"]
[ext_resource type="Texture2D" uid="uid://dosoetfto2sxg" path="res://Artwork/Misc/fish_right.png" id="6_t3x4p"]
[ext_resource type="Texture2D" uid="uid://ij2hym0xiktc" path="res://Artwork/Misc/fish_left.png" id="7_2paae"]
[ext_resource type="Texture2D" uid="uid://cgnwkbn7lkr3a" path="res://Artwork/Misc/fish.png" id="8_8soon"]
[ext_resource type="Script" path="res://Minigames/Fish/Game1/TimeLeft.gd" id="12_b76f7"]


[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8dyw"]
size = Vector2(183.333, 651.667)

[sub_resource type="LabelSettings" id="LabelSettings_40ay5"]
font_size = 70

[node name="FishBalance" type="Node2D"]
script = ExtResource("1_yb7no")

[node name="Player" type="Area2D" parent="."]
position = Vector2(567, 325)
scale = Vector2(0.6, 0.6)
metadata/_edit_group_ = true

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
texture = ExtResource("2_srywf")
hframes = 2

[node name="PlayerCollision" type="CollisionShape2D" parent="Player"]
position = Vector2(-11.6667, 55.8334)
shape = SubResource("RectangleShape2D_g8dyw")

[node name="Fishbowl" type="Node2D" parent="."]
position = Vector2(540, 317)
scale = Vector2(0.5, 0.5)
script = ExtResource("3_r2ypj")

[node name="FishbowlSprite" type="Sprite2D" parent="Fishbowl"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ux2nd")
hframes = 2
vframes = 3
script = ExtResource("5_yv7u8")

[node name="FishbowlRight" type="Sprite2D" parent="Fishbowl"]
visible = false
position = Vector2(102, 20)
scale = Vector2(0.402857, 0.402857)
texture = ExtResource("6_t3x4p")

[node name="FishbowlLeft" type="Sprite2D" parent="Fishbowl"]
visible = false
position = Vector2(-66, 20)
scale = Vector2(0.403, 0.403)
texture = ExtResource("7_2paae")

[node name="FishLeft" type="Sprite2D" parent="Fishbowl"]
visible = false
position = Vector2(-324, 164)
rotation = -0.837758
scale = Vector2(0.393333, 0.393333)
texture = ExtResource("8_8soon")

[node name="FishRight" type="Sprite2D" parent="Fishbowl"]
visible = false
position = Vector2(416, 160)
rotation = 0.677188
scale = Vector2(0.395833, 0.395833)
texture = ExtResource("8_8soon")

[node name="DogSpawner" type="Node2D" parent="."]
script = ExtResource("2_achxp")
FishbowlDog_tscn = ExtResource("1_22xtv")

[node name="DogSpawnerTimer" type="Timer" parent="DogSpawner"]
autostart = true
script = ExtResource("3_2gpg7")

[node name="LoseTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WinTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="TimeLeft" type="Label" parent="WinTimer"]
offset_left = 537.0
offset_top = 37.0
offset_right = 663.0
offset_bottom = 136.0
label_settings = SubResource("LabelSettings_40ay5")
script = ExtResource("12_b76f7")

[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="game_over" from="." to="Fishbowl/FishbowlSprite" method="_on_fish_balance_game_over"]
[connection signal="area_entered" from="Player" to="." method="_dog_passing"]
[connection signal="dog_spawned" from="DogSpawner" to="." method="_dog_spawned"]
[connection signal="timeout" from="DogSpawner/DogSpawnerTimer" to="DogSpawner" method="_spawn_dog"]
[connection signal="timeout" from="DogSpawner/DogSpawnerTimer" to="DogSpawner/DogSpawnerTimer" method="_on_timeout"]
[connection signal="timeout" from="LoseTimer" to="." method="_on_lose_timer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
